# ocrmypdf-doxa-plugin

./: .gitignore  README.md  setup.cfg  setup.py
doxa/: DoxaPy.cpp
ocrmypdf_doxa_plugin/: plugin.py
