[metadata]
name = ocrmypdf-doxa-plugin
version = 0.3.0
description = OCRmyPDF plugin including Doxa binarization framework
long_description = file: README.md
url = https://github.com/panzergame/ocrmypdf-doxa-plugin
author = Tristan Porteries
author_email = tristan.porteries@gmail.com
license = CC0-1.0
classifiers =
	License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
[options]
include_package_data = true

[pycodestyle]
max-line-length = 80

